--- a/all_items.ipynb
+++ b/all_items.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 223,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 224,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 225,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 226,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 228,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 229,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 230,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 231,
    "metadata": {},
    "outputs": [
     {
@@ -236,6 +236,7 @@
          "hovertemplate": "Country=%{location}<br>Count=%{z}<extra></extra>",
          "locationmode": "country names",
          "locations": [
+          "India",
           "New Zealand",
           "Russia",
           "United States",
@@ -251,7 +252,6 @@
           "Denmark",
           "Australia",
           "Mali",
-          "India",
           "Sri Lanka",
           "Bangladesh",
           "France",
@@ -314,6 +314,7 @@
          "name": "",
          "type": "choropleth",
          "z": [
+          12,
           8,
           58,
           170,
@@ -329,7 +330,6 @@
           2,
           19,
           3,
-          11,
           1,
           1,
           13,
@@ -1296,7 +1296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 232,
    "metadata": {},
    "outputs": [
     {
@@ -1357,17 +1357,17 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>69</th>\n",
-       "      <td>Libya</td>\n",
+       "      <td>Uganda</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>70</th>\n",
-       "      <td>North Macedonia</td>\n",
+       "      <td>Angola</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>71</th>\n",
-       "      <td>Romania</td>\n",
+       "      <td>Bangladesh</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1386,23 +1386,23 @@
        "</div>"
       ],
       "text/plain": [
-       "            Country  Count\n",
-       "0                UK    203\n",
-       "1     United States    170\n",
-       "2           Ukraine     88\n",
-       "3            Russia     58\n",
-       "4            Israel     28\n",
-       "..              ...    ...\n",
-       "69            Libya      1\n",
-       "70  North Macedonia      1\n",
-       "71          Romania      1\n",
-       "72        Sri Lanka      1\n",
-       "73          Albania      1\n",
+       "          Country  Count\n",
+       "0              UK    203\n",
+       "1   United States    170\n",
+       "2         Ukraine     88\n",
+       "3          Russia     58\n",
+       "4          Israel     28\n",
+       "..            ...    ...\n",
+       "69         Uganda      1\n",
+       "70         Angola      1\n",
+       "71     Bangladesh      1\n",
+       "72      Sri Lanka      1\n",
+       "73        Albania      1\n",
        "\n",
        "[74 rows x 2 columns]"
       ]
      },
-     "execution_count": 211,
+     "execution_count": 232,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1414,7 +1414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 233,
    "metadata": {},
    "outputs": [
     {
@@ -1439,8 +1439,8 @@
           "Japan",
           "Australia",
           "Iraq",
-          "France",
           "Ireland",
+          "France",
           "Canada",
           "Oman",
           "India",
@@ -1449,59 +1449,59 @@
           "China",
           "New Zealand",
           "Cyprus",
-          "Austria",
           "Cuba",
+          "Austria",
+          "South Africa",
+          "Brazil",
+          "Afghanistan",
           "United Kingdom",
           "Pakistan",
-          "Afghanistan",
-          "Brazil",
-          "South Africa",
           "Spain",
-          "Sweden",
           "Niger",
-          "Italy",
-          "Slovakia",
           "Nigeria",
+          "Slovakia",
+          "Italy",
+          "Sweden",
           "Mali",
           "Singapore",
-          "Colombia",
-          "South Sudan",
-          "Norway",
-          "Sudan",
-          "Finland",
-          "Greece",
           "Argentina",
-          "Belgium",
-          "Denmark",
+          "Colombia",
+          "Finland",
+          "South Sudan",
+          "Sudan",
+          "Norway",
           "Serbia",
-          "Netherlands",
-          "Georgia",
+          "Belgium",
+          "Greece",
+          "Denmark",
+          "United Arab Emirates",
           "Algeria",
+          "Uruguay",
+          "Kuwait",
+          "Georgia",
           "Morocco",
           "Hong Kong",
           "Myanmar",
-          "Uruguay",
           "Philippines",
-          "United Arab Emirates",
           "Gibraltar",
           "Nepal",
           "Chile",
-          "Bangladesh",
-          "Somalia",
-          "Kuwait",
+          "Netherlands",
+          "Dominica",
           "Indonesia",
-          "Uganda",
           "Latvia",
           "Poland",
+          "Somalia",
           "Dominican Republic",
-          "Dominica",
-          "Angola",
           "Switzerland",
           "Ghana",
           "Bulgaria",
           "Libya",
           "North Macedonia",
           "Romania",
+          "Uganda",
+          "Angola",
+          "Bangladesh",
           "Sri Lanka",
           "Albania"
          ],
@@ -1521,7 +1521,7 @@
           13,
           12,
           12,
-          11,
+          12,
           9,
           9,
           8,
@@ -2490,7 +2490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 234,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2507,7 +2507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2519,7 +2519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 236,
    "metadata": {},
    "outputs": [
     {
@@ -2560,7 +2560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 237,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2581,7 +2581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 238,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2595,7 +2595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 239,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2607,7 +2607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 240,
    "metadata": {},
    "outputs": [
     {
@@ -2673,12 +2673,12 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>Canada</td>\n",
+       "      <td>London</td>\n",
        "      <td>34</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>London</td>\n",
+       "      <td>Canada</td>\n",
        "      <td>34</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -2708,7 +2708,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
-       "      <td>Washington</td>\n",
+       "      <td>India</td>\n",
        "      <td>19</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -2716,25 +2716,25 @@
        "</div>"
       ],
       "text/plain": [
-       "           GPE  count\n",
-       "0          USA    337\n",
-       "1           UK    272\n",
-       "2       Russia    173\n",
-       "3      Ukraine    147\n",
-       "4      Germany     62\n",
-       "5         Iraq     39\n",
-       "6       Israel     38\n",
-       "7       Canada     34\n",
-       "8       London     34\n",
-       "9       France     34\n",
-       "10       China     28\n",
-       "11   Australia     23\n",
-       "12      Moscow     21\n",
-       "13      Turkey     20\n",
-       "14  Washington     19"
+       "          GPE  count\n",
+       "0         USA    337\n",
+       "1          UK    272\n",
+       "2      Russia    173\n",
+       "3     Ukraine    147\n",
+       "4     Germany     62\n",
+       "5        Iraq     39\n",
+       "6      Israel     38\n",
+       "7      London     34\n",
+       "8      Canada     34\n",
+       "9      France     34\n",
+       "10      China     28\n",
+       "11  Australia     23\n",
+       "12     Moscow     21\n",
+       "13     Turkey     20\n",
+       "14      India     19"
       ]
      },
-     "execution_count": 219,
+     "execution_count": 240,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2781,7 +2781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 241,
    "metadata": {},
    "outputs": [
     {
@@ -2827,12 +2827,12 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>John le Carré</td>\n",
+       "      <td>Joe Biden</td>\n",
        "      <td>10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Joe Biden</td>\n",
+       "      <td>John le Carré</td>\n",
        "      <td>10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -2847,7 +2847,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>James Bond</td>\n",
+       "      <td>Stalin</td>\n",
        "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -2862,17 +2862,17 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
-       "      <td>Stalin</td>\n",
+       "      <td>James Bond</td>\n",
        "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
-       "      <td>Edward Snowden</td>\n",
+       "      <td>Gorbachev</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
-       "      <td>Gorbachev</td>\n",
+       "      <td>Edward Snowden</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -2882,7 +2882,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
-       "      <td>Gen Hayden</td>\n",
+       "      <td>David Priess</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -2894,21 +2894,21 @@
        "0       Vladimir Putin     52\n",
        "1    Winston Churchill     16\n",
        "2         Adolf Hitler     14\n",
-       "3        John le Carré     10\n",
-       "4            Joe Biden     10\n",
+       "3            Joe Biden     10\n",
+       "4        John le Carré     10\n",
        "5       Michael Morell      9\n",
        "6      Loch K. Johnson      8\n",
-       "7           James Bond      6\n",
+       "7               Stalin      6\n",
        "8                 Bush      6\n",
        "9          David Omand      6\n",
-       "10              Stalin      6\n",
-       "11      Edward Snowden      5\n",
-       "12           Gorbachev      5\n",
+       "10          James Bond      6\n",
+       "11           Gorbachev      5\n",
+       "12      Edward Snowden      5\n",
        "13  Christopher Andrew      5\n",
-       "14          Gen Hayden      5"
+       "14        David Priess      5"
       ]
      },
-     "execution_count": 220,
+     "execution_count": 241,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2945,7 +2945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 242,
    "metadata": {},
    "outputs": [
     {
@@ -3011,12 +3011,12 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>Allied</td>\n",
+       "      <td>Schar School of Policy and Government</td>\n",
        "      <td>16</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>Schar School of Policy and Government</td>\n",
+       "      <td>Allied</td>\n",
        "      <td>16</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -3062,8 +3062,8 @@
        "4                          Foreign Office     18\n",
        "5                    British Intelligence     17\n",
        "6            Joint Intelligence Committee     16\n",
-       "7                                  Allied     16\n",
-       "8   Schar School of Policy and Government     16\n",
+       "7   Schar School of Policy and Government     16\n",
+       "8                                  Allied     16\n",
        "9                                     NSA     15\n",
        "10                                    SOE     14\n",
        "11                                   NATO     13\n",
@@ -3072,7 +3072,7 @@
        "14                George Mason University      9"
       ]
      },
-     "execution_count": 221,
+     "execution_count": 242,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3114,7 +3114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 243,
    "metadata": {},
    "outputs": [],
    "source": [
