--- a/all_items.ipynb
+++ b/all_items.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -236,9 +236,17 @@
          "hovertemplate": "Country=%{location}<br>Count=%{z}<extra></extra>",
          "locationmode": "country names",
          "locations": [
-          "India",
-          "New Zealand",
+          "Australia",
+          "China",
+          "Ukraine",
+          "Germany",
           "Russia",
+          "Denmark",
+          "Serbia",
+          "Oman",
+          "India",
+          "Pakistan",
+          "New Zealand",
           "United States",
           "Israel",
           "UK",
@@ -246,19 +254,12 @@
           "Sudan",
           "South Sudan",
           "Uganda",
-          "Ukraine",
           "Angola",
           "Belgium",
-          "Denmark",
-          "Australia",
           "Mali",
           "Sri Lanka",
           "Bangladesh",
           "France",
-          "Pakistan",
-          "Germany",
-          "Serbia",
-          "Oman",
           "Romania",
           "North Macedonia",
           "Afghanistan",
@@ -279,7 +280,6 @@
           "Nigeria",
           "Cuba",
           "Italy",
-          "China",
           "Dominica",
           "Dominican Republic",
           "Somalia",
@@ -314,9 +314,17 @@
          "name": "",
          "type": "choropleth",
          "z": [
-          12,
+          20,
+          9,
+          89,
+          27,
+          59,
+          3,
+          3,
+          13,
+          13,
+          6,
           8,
-          58,
           170,
           28,
           203,
@@ -324,19 +332,12 @@
           2,
           2,
           1,
-          88,
           1,
           2,
-          2,
-          19,
           3,
           1,
           1,
           13,
-          5,
-          27,
-          2,
-          12,
           1,
           1,
           5,
@@ -357,7 +358,6 @@
           3,
           6,
           3,
-          8,
           1,
           1,
           1,
@@ -1296,7 +1296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -1338,12 +1338,12 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Ukraine</td>\n",
-       "      <td>88</td>\n",
+       "      <td>89</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Russia</td>\n",
-       "      <td>58</td>\n",
+       "      <td>59</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1357,22 +1357,22 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>69</th>\n",
-       "      <td>Uganda</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>70</th>\n",
-       "      <td>Angola</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>71</th>\n",
        "      <td>Bangladesh</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>72</th>\n",
+       "      <th>70</th>\n",
        "      <td>Sri Lanka</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>71</th>\n",
+       "      <td>Angola</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>72</th>\n",
+       "      <td>Uganda</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1389,20 +1389,20 @@
        "          Country  Count\n",
        "0              UK    203\n",
        "1   United States    170\n",
-       "2         Ukraine     88\n",
-       "3          Russia     58\n",
+       "2         Ukraine     89\n",
+       "3          Russia     59\n",
        "4          Israel     28\n",
        "..            ...    ...\n",
-       "69         Uganda      1\n",
-       "70         Angola      1\n",
-       "71     Bangladesh      1\n",
-       "72      Sri Lanka      1\n",
+       "69     Bangladesh      1\n",
+       "70      Sri Lanka      1\n",
+       "71         Angola      1\n",
+       "72         Uganda      1\n",
        "73        Albania      1\n",
        "\n",
        "[74 rows x 2 columns]"
       ]
      },
-     "execution_count": 232,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1414,7 +1414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -1439,70 +1439,70 @@
           "Japan",
           "Australia",
           "Iraq",
+          "India",
           "Ireland",
           "France",
-          "Canada",
           "Oman",
-          "India",
+          "Canada",
           "Turkey",
           "Egypt",
           "China",
           "New Zealand",
+          "Pakistan",
           "Cyprus",
-          "Cuba",
           "Austria",
-          "South Africa",
-          "Brazil",
+          "Cuba",
           "Afghanistan",
           "United Kingdom",
-          "Pakistan",
+          "South Africa",
+          "Brazil",
           "Spain",
-          "Niger",
           "Nigeria",
-          "Slovakia",
+          "Serbia",
           "Italy",
+          "Niger",
           "Sweden",
           "Mali",
+          "Slovakia",
+          "Denmark",
           "Singapore",
-          "Argentina",
-          "Colombia",
-          "Finland",
-          "South Sudan",
-          "Sudan",
           "Norway",
-          "Serbia",
+          "Argentina",
+          "Sudan",
           "Belgium",
           "Greece",
-          "Denmark",
+          "Colombia",
+          "South Sudan",
+          "Finland",
           "United Arab Emirates",
-          "Algeria",
-          "Uruguay",
-          "Kuwait",
-          "Georgia",
-          "Morocco",
           "Hong Kong",
+          "Uruguay",
           "Myanmar",
-          "Philippines",
-          "Gibraltar",
-          "Nepal",
           "Chile",
+          "Nepal",
+          "Algeria",
+          "Georgia",
+          "Gibraltar",
+          "Philippines",
+          "Morocco",
+          "Kuwait",
           "Netherlands",
-          "Dominica",
+          "Switzerland",
           "Indonesia",
           "Latvia",
           "Poland",
           "Somalia",
           "Dominican Republic",
-          "Switzerland",
+          "Dominica",
           "Ghana",
           "Bulgaria",
           "Libya",
           "North Macedonia",
           "Romania",
-          "Uganda",
-          "Angola",
           "Bangladesh",
           "Sri Lanka",
+          "Angola",
+          "Uganda",
           "Albania"
          ],
          "name": "",
@@ -1510,26 +1510,26 @@
          "z": [
           203,
           170,
-          88,
-          58,
+          89,
+          59,
           28,
           27,
           20,
-          19,
+          20,
           16,
           13,
           13,
-          12,
-          12,
+          13,
+          13,
           12,
           9,
           9,
+          9,
           8,
-          8,
           6,
           6,
           6,
-          5,
+          6,
           5,
           5,
           5,
@@ -1542,8 +1542,8 @@
           3,
           3,
           3,
-          2,
-          2,
+          3,
+          3,
           2,
           2,
           2,
@@ -2490,7 +2490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2507,7 +2507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2519,7 +2519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -2560,7 +2560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2581,7 +2581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2595,7 +2595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2607,7 +2607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
@@ -2639,22 +2639,22 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>USA</td>\n",
-       "      <td>337</td>\n",
+       "      <td>347</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>UK</td>\n",
-       "      <td>272</td>\n",
+       "      <td>273</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Russia</td>\n",
-       "      <td>173</td>\n",
+       "      <td>175</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Ukraine</td>\n",
-       "      <td>147</td>\n",
+       "      <td>149</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -2674,7 +2674,7 @@
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>London</td>\n",
-       "      <td>34</td>\n",
+       "      <td>35</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
@@ -2689,7 +2689,7 @@
        "    <tr>\n",
        "      <th>10</th>\n",
        "      <td>China</td>\n",
-       "      <td>28</td>\n",
+       "      <td>29</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
@@ -2709,7 +2709,7 @@
        "    <tr>\n",
        "      <th>14</th>\n",
        "      <td>India</td>\n",
-       "      <td>19</td>\n",
+       "      <td>20</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -2717,24 +2717,24 @@
       ],
       "text/plain": [
        "          GPE  count\n",
-       "0         USA    337\n",
-       "1          UK    272\n",
-       "2      Russia    173\n",
-       "3     Ukraine    147\n",
+       "0         USA    347\n",
+       "1          UK    273\n",
+       "2      Russia    175\n",
+       "3     Ukraine    149\n",
        "4     Germany     62\n",
        "5        Iraq     39\n",
        "6      Israel     38\n",
-       "7      London     34\n",
+       "7      London     35\n",
        "8      Canada     34\n",
        "9      France     34\n",
-       "10      China     28\n",
+       "10      China     29\n",
        "11  Australia     23\n",
        "12     Moscow     21\n",
        "13     Turkey     20\n",
-       "14      India     19"
+       "14      India     20"
       ]
      },
-     "execution_count": 240,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2781,7 +2781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
@@ -2828,7 +2828,7 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Joe Biden</td>\n",
-       "      <td>10</td>\n",
+       "      <td>11</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -2848,7 +2848,7 @@
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>Stalin</td>\n",
-       "      <td>6</td>\n",
+       "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
@@ -2857,32 +2857,32 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>David Omand</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
        "      <td>James Bond</td>\n",
        "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>David Omand</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>11</th>\n",
-       "      <td>Gorbachev</td>\n",
+       "      <td>David Priess</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
-       "      <td>Edward Snowden</td>\n",
+       "      <td>Gorbachev</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
-       "      <td>Christopher Andrew</td>\n",
+       "      <td>Edward Snowden</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
-       "      <td>David Priess</td>\n",
+       "      <td>Gen Hayden</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -2890,25 +2890,25 @@
        "</div>"
       ],
       "text/plain": [
-       "                PERSON  count\n",
-       "0       Vladimir Putin     52\n",
-       "1    Winston Churchill     16\n",
-       "2         Adolf Hitler     14\n",
-       "3            Joe Biden     10\n",
-       "4        John le Carré     10\n",
-       "5       Michael Morell      9\n",
-       "6      Loch K. Johnson      8\n",
-       "7               Stalin      6\n",
-       "8                 Bush      6\n",
-       "9          David Omand      6\n",
-       "10          James Bond      6\n",
-       "11           Gorbachev      5\n",
-       "12      Edward Snowden      5\n",
-       "13  Christopher Andrew      5\n",
-       "14        David Priess      5"
+       "               PERSON  count\n",
+       "0      Vladimir Putin     52\n",
+       "1   Winston Churchill     16\n",
+       "2        Adolf Hitler     14\n",
+       "3           Joe Biden     11\n",
+       "4       John le Carré     10\n",
+       "5      Michael Morell      9\n",
+       "6     Loch K. Johnson      8\n",
+       "7              Stalin      7\n",
+       "8                Bush      6\n",
+       "9          James Bond      6\n",
+       "10        David Omand      6\n",
+       "11       David Priess      5\n",
+       "12          Gorbachev      5\n",
+       "13     Edward Snowden      5\n",
+       "14         Gen Hayden      5"
       ]
      },
-     "execution_count": 241,
+     "execution_count": 127,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2945,7 +2945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -2982,17 +2982,17 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>KGB</td>\n",
-       "      <td>30</td>\n",
+       "      <td>31</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>SIS</td>\n",
-       "      <td>25</td>\n",
+       "      <td>26</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>FBI</td>\n",
-       "      <td>21</td>\n",
+       "      <td>23</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -3011,12 +3011,12 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>Schar School of Policy and Government</td>\n",
+       "      <td>Allied</td>\n",
        "      <td>16</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>Allied</td>\n",
+       "      <td>Schar School of Policy and Government</td>\n",
        "      <td>16</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -3041,12 +3041,12 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
-       "      <td>Intelligence Services</td>\n",
+       "      <td>George Mason University</td>\n",
        "      <td>9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
-       "      <td>George Mason University</td>\n",
+       "      <td>EU</td>\n",
        "      <td>9</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -3056,23 +3056,23 @@
       "text/plain": [
        "                                      ORG  count\n",
        "0                                     CIA    142\n",
-       "1                                     KGB     30\n",
-       "2                                     SIS     25\n",
-       "3                                     FBI     21\n",
+       "1                                     KGB     31\n",
+       "2                                     SIS     26\n",
+       "3                                     FBI     23\n",
        "4                          Foreign Office     18\n",
        "5                    British Intelligence     17\n",
        "6            Joint Intelligence Committee     16\n",
-       "7   Schar School of Policy and Government     16\n",
-       "8                                  Allied     16\n",
+       "7                                  Allied     16\n",
+       "8   Schar School of Policy and Government     16\n",
        "9                                     NSA     15\n",
        "10                                    SOE     14\n",
        "11                                   NATO     13\n",
        "12                                     AI     10\n",
-       "13                  Intelligence Services      9\n",
-       "14                George Mason University      9"
+       "13                George Mason University      9\n",
+       "14                                     EU      9"
       ]
      },
-     "execution_count": 242,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3114,7 +3114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
