--- a/all_items.ipynb
+++ b/all_items.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -1298,7 +1298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -1404,7 +1404,7 @@
        "[75 rows x 2 columns]"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1416,7 +1416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -2494,7 +2494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2511,7 +2511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2523,7 +2523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -2564,7 +2564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2585,7 +2585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2599,7 +2599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2611,7 +2611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -2643,7 +2643,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>USA</td>\n",
-       "      <td>371</td>\n",
+       "      <td>372</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -2663,7 +2663,7 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Germany</td>\n",
-       "      <td>64</td>\n",
+       "      <td>65</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -2678,7 +2678,7 @@
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>London</td>\n",
-       "      <td>37</td>\n",
+       "      <td>38</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
@@ -2721,14 +2721,14 @@
       ],
       "text/plain": [
        "          GPE  count\n",
-       "0         USA    371\n",
+       "0         USA    372\n",
        "1          UK    278\n",
        "2      Russia    185\n",
        "3     Ukraine    151\n",
-       "4     Germany     64\n",
+       "4     Germany     65\n",
        "5      Israel     42\n",
        "6        Iraq     41\n",
-       "7      London     37\n",
+       "7      London     38\n",
        "8      France     36\n",
        "9      Canada     36\n",
        "10      China     35\n",
@@ -2738,7 +2738,7 @@
        "14      Japan     21"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2785,7 +2785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -2871,12 +2871,12 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
-       "      <td>Edward Snowden</td>\n",
+       "      <td>Johnson</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
-       "      <td>Gorbachev</td>\n",
+       "      <td>Edward Snowden</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -2886,7 +2886,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
-       "      <td>Christopher Andrew</td>\n",
+       "      <td>Gorbachev</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -2894,25 +2894,25 @@
        "</div>"
       ],
       "text/plain": [
-       "                PERSON  count\n",
-       "0       Vladimir Putin     52\n",
-       "1         Adolf Hitler     18\n",
-       "2    Winston Churchill     16\n",
-       "3        John le Carré     12\n",
-       "4            Joe Biden     11\n",
-       "5      Loch K. Johnson      9\n",
-       "6       Michael Morell      9\n",
-       "7               Stalin      7\n",
-       "8          David Omand      7\n",
-       "9           James Bond      6\n",
-       "10                Bush      6\n",
-       "11      Edward Snowden      5\n",
-       "12           Gorbachev      5\n",
-       "13          Gen Hayden      5\n",
-       "14  Christopher Andrew      5"
+       "               PERSON  count\n",
+       "0      Vladimir Putin     52\n",
+       "1        Adolf Hitler     18\n",
+       "2   Winston Churchill     16\n",
+       "3       John le Carré     12\n",
+       "4           Joe Biden     11\n",
+       "5     Loch K. Johnson      9\n",
+       "6      Michael Morell      9\n",
+       "7              Stalin      7\n",
+       "8         David Omand      7\n",
+       "9          James Bond      6\n",
+       "10               Bush      6\n",
+       "11            Johnson      5\n",
+       "12     Edward Snowden      5\n",
+       "13         Gen Hayden      5\n",
+       "14          Gorbachev      5"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2949,7 +2949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -3005,22 +3005,22 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>British Intelligence</td>\n",
-       "      <td>17</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
        "      <td>NSA</td>\n",
        "      <td>17</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>British Intelligence</td>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>Allied</td>\n",
+       "      <td>Schar School of Policy and Government</td>\n",
        "      <td>16</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>Schar School of Policy and Government</td>\n",
+       "      <td>Allied</td>\n",
        "      <td>16</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -3050,7 +3050,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
-       "      <td>EU</td>\n",
+       "      <td>Intelligence Failure</td>\n",
        "      <td>9</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -3064,19 +3064,19 @@
        "2                                     SIS     26\n",
        "3                                     FBI     23\n",
        "4                          Foreign Office     18\n",
-       "5                    British Intelligence     17\n",
-       "6                                     NSA     17\n",
-       "7                                  Allied     16\n",
-       "8   Schar School of Policy and Government     16\n",
+       "5                                     NSA     17\n",
+       "6                    British Intelligence     17\n",
+       "7   Schar School of Policy and Government     16\n",
+       "8                                  Allied     16\n",
        "9            Joint Intelligence Committee     16\n",
        "10                                    SOE     15\n",
        "11                                   NATO     14\n",
        "12                                     AI     12\n",
        "13                  Intelligence Services     10\n",
-       "14                                     EU      9"
+       "14                   Intelligence Failure      9"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3118,7 +3118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
