--- a/all_items.ipynb
+++ b/all_items.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -236,6 +236,8 @@
          "hovertemplate": "Country=%{location}<br>Count=%{z}<extra></extra>",
          "locationmode": "country names",
          "locations": [
+          "Australia",
+          "Germany",
           "Sweden",
           "Japan",
           "China",
@@ -258,8 +260,6 @@
           "Ukraine",
           "Ireland",
           "Iraq",
-          "Australia",
-          "Germany",
           "Serbia",
           "India",
           "Pakistan",
@@ -315,6 +315,8 @@
          "name": "",
          "type": "choropleth",
          "z": [
+          21,
+          28,
           5,
           21,
           11,
@@ -337,8 +339,6 @@
           90,
           14,
           17,
-          20,
-          27,
           3,
           13,
           6,
@@ -1298,7 +1298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -1404,7 +1404,7 @@
        "[75 rows x 2 columns]"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1416,7 +1416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -1438,68 +1438,68 @@
           "Russia",
           "Israel",
           "Germany",
-          "Japan",
           "Australia",
+          "Japan",
           "Iraq",
+          "Canada",
           "Ireland",
           "Oman",
-          "Canada",
-          "India",
           "France",
+          "India",
           "China",
-          "Egypt",
           "New Zealand",
+          "Egypt",
           "Turkey",
-          "Cuba",
           "Austria",
           "Cyprus",
-          "Pakistan",
+          "Cuba",
           "Brazil",
+          "Pakistan",
           "Afghanistan",
           "South Africa",
-          "Sweden",
           "United Kingdom",
-          "Denmark",
+          "Sweden",
           "Spain",
-          "Greece",
-          "Nigeria",
-          "Italy",
-          "Slovakia",
-          "Sudan",
-          "South Sudan",
-          "Niger",
-          "Sri Lanka",
+          "Denmark",
           "Serbia",
+          "South Sudan",
+          "Italy",
+          "Nigeria",
+          "Niger",
+          "Slovakia",
+          "Greece",
+          "Sudan",
+          "Sri Lanka",
           "Singapore",
           "Mali",
           "Norway",
-          "Finland",
-          "Belgium",
-          "Romania",
-          "Argentina",
-          "Colombia",
           "Uganda",
-          "Netherlands",
-          "Hong Kong",
-          "Morocco",
-          "Georgia",
+          "Argentina",
+          "Romania",
+          "Colombia",
+          "Belgium",
+          "Finland",
           "Algeria",
+          "Uruguay",
+          "Hong Kong",
+          "Georgia",
+          "Morocco",
+          "Netherlands",
           "Myanmar",
           "Philippines",
-          "Uruguay",
           "Gibraltar",
           "Nepal",
           "Chile",
           "United Arab Emirates",
-          "Angola",
+          "Somalia",
           "Kuwait",
           "Indonesia",
-          "Antarctica",
           "Latvia",
           "Poland",
-          "Somalia",
+          "Angola",
           "Dominican Republic",
           "Dominica",
+          "Antarctica",
           "Switzerland",
           "Ghana",
           "Bulgaria",
@@ -1516,9 +1516,9 @@
           90,
           62,
           30,
-          27,
+          28,
           21,
-          20,
+          21,
           17,
           14,
           14,
@@ -2494,7 +2494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2511,7 +2511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2523,7 +2523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -2564,7 +2564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2585,7 +2585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2599,7 +2599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2611,7 +2611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -2663,7 +2663,7 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Germany</td>\n",
-       "      <td>65</td>\n",
+       "      <td>67</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -2678,16 +2678,16 @@
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>London</td>\n",
-       "      <td>38</td>\n",
+       "      <td>39</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>France</td>\n",
+       "      <td>Canada</td>\n",
        "      <td>36</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>Canada</td>\n",
+       "      <td>France</td>\n",
        "      <td>36</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -2698,7 +2698,7 @@
        "    <tr>\n",
        "      <th>11</th>\n",
        "      <td>Australia</td>\n",
-       "      <td>24</td>\n",
+       "      <td>25</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
@@ -2725,20 +2725,20 @@
        "1          UK    278\n",
        "2      Russia    185\n",
        "3     Ukraine    151\n",
-       "4     Germany     65\n",
+       "4     Germany     67\n",
        "5      Israel     42\n",
        "6        Iraq     41\n",
-       "7      London     38\n",
-       "8      France     36\n",
-       "9      Canada     36\n",
+       "7      London     39\n",
+       "8      Canada     36\n",
+       "9      France     36\n",
        "10      China     35\n",
-       "11  Australia     24\n",
+       "11  Australia     25\n",
        "12     Moscow     24\n",
        "13     Turkey     21\n",
        "14      Japan     21"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2785,7 +2785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -2841,52 +2841,52 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>Loch K. Johnson</td>\n",
-       "      <td>9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
        "      <td>Michael Morell</td>\n",
        "      <td>9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Stalin</td>\n",
-       "      <td>7</td>\n",
+       "      <th>6</th>\n",
+       "      <td>Loch K. Johnson</td>\n",
+       "      <td>9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
+       "      <th>7</th>\n",
        "      <td>David Omand</td>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>James Bond</td>\n",
-       "      <td>6</td>\n",
+       "      <th>8</th>\n",
+       "      <td>Stalin</td>\n",
+       "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10</th>\n",
+       "      <th>9</th>\n",
        "      <td>Bush</td>\n",
        "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>James Bond</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>11</th>\n",
-       "      <td>Johnson</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>Edward Snowden</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
        "      <td>Gen Hayden</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>14</th>\n",
+       "      <th>12</th>\n",
        "      <td>Gorbachev</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>David Priess</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Edward Snowden</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -2900,19 +2900,19 @@
        "2   Winston Churchill     16\n",
        "3       John le Carré     12\n",
        "4           Joe Biden     11\n",
-       "5     Loch K. Johnson      9\n",
-       "6      Michael Morell      9\n",
-       "7              Stalin      7\n",
-       "8         David Omand      7\n",
-       "9          James Bond      6\n",
-       "10               Bush      6\n",
-       "11            Johnson      5\n",
-       "12     Edward Snowden      5\n",
-       "13         Gen Hayden      5\n",
-       "14          Gorbachev      5"
+       "5      Michael Morell      9\n",
+       "6     Loch K. Johnson      9\n",
+       "7         David Omand      7\n",
+       "8              Stalin      7\n",
+       "9                Bush      6\n",
+       "10         James Bond      6\n",
+       "11         Gen Hayden      5\n",
+       "12          Gorbachev      5\n",
+       "13       David Priess      5\n",
+       "14     Edward Snowden      5"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2949,7 +2949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -3005,22 +3005,22 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>NSA</td>\n",
-       "      <td>17</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
        "      <td>British Intelligence</td>\n",
        "      <td>17</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Allied</td>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>Schar School of Policy and Government</td>\n",
-       "      <td>16</td>\n",
+       "      <td>NSA</td>\n",
+       "      <td>17</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>Allied</td>\n",
+       "      <td>Schar School of Policy and Government</td>\n",
        "      <td>16</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -3050,7 +3050,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
-       "      <td>Intelligence Failure</td>\n",
+       "      <td>BBC</td>\n",
        "      <td>9</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -3064,19 +3064,19 @@
        "2                                     SIS     26\n",
        "3                                     FBI     23\n",
        "4                          Foreign Office     18\n",
-       "5                                     NSA     17\n",
-       "6                    British Intelligence     17\n",
-       "7   Schar School of Policy and Government     16\n",
-       "8                                  Allied     16\n",
+       "5                    British Intelligence     17\n",
+       "6                                  Allied     17\n",
+       "7                                     NSA     17\n",
+       "8   Schar School of Policy and Government     16\n",
        "9            Joint Intelligence Committee     16\n",
        "10                                    SOE     15\n",
        "11                                   NATO     14\n",
        "12                                     AI     12\n",
        "13                  Intelligence Services     10\n",
-       "14                   Intelligence Failure      9"
+       "14                                    BBC      9"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 125,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3118,7 +3118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
